--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,62 @@
-Mezzanine==4.2.3
+Package                    Version  
+-------------------------- ---------
+asn1crypto                 0.24.0   
+bcrypt                     3.1.4    
+beautifulsoup4             4.6.0    
+bleach                     2.1.3    
+certifi                    2018.1.18
+cffi                       1.11.5   
+chardet                    3.0.4    
+cryptography               2.2.2    
+dj-database-url            0.5.0    
+Django                     1.10.8   
+django-classy-tags         0.8.0    
+django-cms                 3.5.2    
+django-contrib-comments    1.8.0    
+django-filer               1.3.0    
+django-formtools           2.1      
+django-mptt                0.8.7    
+django-polymorphic         1.3      
+django-sekizai             0.10.0   
+django-treebeard           4.2.1    
+djangocms-admin-style      1.2.8    
+djangocms-attributes-field 0.3.0    
+djangocms-column           1.7.0    
+djangocms-file             2.0.2    
+djangocms-googlemap        1.1.1    
+djangocms-installer        1.0.0    
+djangocms-link             2.1.2    
+djangocms-picture          2.0.6    
+djangocms-snippet          2.0.0    
+djangocms-style            2.0.2    
+djangocms-text-ckeditor    3.6.0    
+djangocms-video            2.0.4    
+easy-thumbnails            2.5      
+enum34                     1.1.6    
+Fabric                     1.14.0   
+filebrowser-safe           0.4.7    
+future                     0.16.0   
+grappelli-safe             0.4.7    
+gunicorn                   19.7.1   
+html5lib                   1.0.1    
+idna                       2.6      
+ipaddress                  1.0.22   
+Mezzanine                  4.2.3    
+MySQL-python               1.2.5    
+oauthlib                   2.0.7    
+paramiko                   2.4.1    
+Pillow                     5.1.0    
+pip                        10.0.0   
+pyasn1                     0.4.2    
+pycparser                  2.18     
+PyNaCl                     1.2.1    
+pytz                       2018.4   
+requests                   2.18.4   
+requests-oauthlib          0.8.0    
+setuptools                 39.0.1   
+six                        1.11.0   
+tzlocal                    1.5.1    
+Unidecode                  0.4.21   
+urllib3                    1.22     
+webencodings               0.5.1    
+wheel                      0.31.0   
